Closed
Bug 1497994
Opened 7 years ago
Closed 7 years ago
Debug assert with SOCKS5 proxy and TFO
Categories
(Core :: Networking: HTTP, defect, P2)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox65 | --- | fixed |
People
(Reporter: u408661, Assigned: dragana)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
While setting up to look into bug 1493724, I configured a local build (latest mozilla-central as of this morning, no other changes) pointed at the TOR SOCKS5 proxy (127.0.0.1:9150, DNS over SOCKS enabled), and at first page load, I hit the assertion at https://searchfox.org/mozilla-central/rev/80ac71c1c54af788b32e851192dfd2de2ec18e18/netwerk/protocol/http/nsHttpConnectionMgr.cpp#4474. Same thing happened when I restarted the browser after the crash. After disabling tfo, everything is fine.
It's not clear to me what the right course here is (should we disable TFO with SOCKS5? should we change the assertion?), nor how urgent of an issue this is, so ni? Dragana, as she's the TFO expert.
| Assignee | ||
Comment 1•7 years ago
|
||
The issue is not really urgent. I could fix this, probably by not trying tfo with socks. I think only if dns over socks is enabled we will hit this assertion.
Flags: needinfo?(dd.mozilla)
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
| Assignee | ||
Updated•7 years ago
|
Priority: -- → P2
Whiteboard: [necko-triaged]
| Assignee | ||
Comment 2•7 years ago
|
||
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9f84155d8f25
Disable TFO for socks proxies. r=nwgh
Keywords: checkin-needed
Comment 4•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in
before you can comment on or make changes to this bug.
Description
•