Bug 1497994 - Disable TFO for socks proxies. r=nwgh

Differential Revision: https://phabricator.services.mozilla.com/D10248

--HG--
extra : moz-landing-system : lando